--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <![endif]-->
 
 </head>
+    <style>
+        hr {height: 2px;
+            color: ff0000;
+        }
+    </style>
 
 <body>
 
@@ -68,7 +73,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
+                        <h1>Mohamed Abdi</h1>
+                        <hr>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
