--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
     <style>
         hr {height: 50px;
-            color: ff0000;
+            color: #ffoooo;
         }
     </style>
 
