--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 </head>
     <style>
-        hr {height: 50px;
-            color: #ffoooo;
+        hr {height: 15px;
+            color:red;
         }
     </style>
 
