--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
     <style>
         hr {height: 15px;
-            color:red;
+            color:rgb(255,0,0);
         }
     </style>
 
