--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
 </head>
     <style>
+        hr{
+        width:100%;
+        color:rgb(255,0,0);
+        height: 2px;
+        }
         
         
     </style>
@@ -73,7 +78,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Mohamed Abdi</h1>
-                        <hr width="100%" color="rgb(255,0,0)" height="2px">
+                        <hr>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
