--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
-                        <img src = "" >
-                    </a>
+                    
+                        <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="blue" class="img-circle" width="200" height="200"/>
+                    
                 </li>
                 <li>
                     <a href="#">Dashboard</a>
