--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <style>
         .carousel-inner > .item > img,
         .carousel-inner > .item > a > img {
-            width: 70%
+            width: 70%;
             margin: auto;
         }
      </style>
@@ -43,7 +43,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     
-                        <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="blue" class="img-circle" width="50" height="50"/>
+                        <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>
                     
                 </li>
                 <li>
@@ -62,12 +62,15 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
+        <div id="page-content-wrapper"> <!--Room-->
+            <div class="container-fluid"><!--Carpet-->
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Mohamed Abdi</h1>
                         <hr>
+                        <div class="jumbotron">
+   
+                        </div>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
