--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img_chania.jpg" alt="Chania" width="460" height="345">
+        <img src="carousel1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
