--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img_carousel1.jpg" alt="Chania" width="460" height="345">
+        <img src="carousel1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -90,7 +90,7 @@
       </div>
 
       <div class="item">
-        <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
+        <img src="carousel2.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -98,7 +98,7 @@
       </div>
     
       <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+        <img src="carousel3.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
@@ -106,7 +106,7 @@
       </div>
 
       <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        <img src="carousel4.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
