--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                                             <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>
                     
                 </li>
-                <li>
-                    <a href="index.html">Home</a>
+                <li>                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="bio.html">Biography</a>
@@ -81,7 +80,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="documents/carousel1.jpg" alt="Chania" width="460" height="345">
+        <img src="background.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
