--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
             <div class="container-fluid"><!--Carpet-->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Mohamed Abdi</h1>
-                        <hr>
+                        <h1>Mohamed Abdi</h1>                        <hr>
                         <div class="jumbotron">
    <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -80,7 +79,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="background.jpg" alt="Chania" width="460" height="345">
+        <img src="C:\Users\mkabd\Desktop\Personal Folder/background.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
