--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
                 <!--Removed unused links-->
                 
-            </ul>
+p            </ul>
         </div>
         <!-- /#sidebar-wrapper -->
 
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Mohamed Abdi</h1>                        <hr>
-                        <div class="jumbotron">
+j                        <div class="jumbotron">
    <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -78,8 +78,8 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
 
-      <div class="item active">
-        <img src="C:\Users\mkabd\Desktop\Personal Folder/background.jpg" alt="Chania" width="460" height="345">
+j      <div class="item active">
+        <img src="carousel1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -87,7 +87,7 @@
       </div>
 
       <div class="item">
-        <img src="carousel2" alt="Chania" width="460" height="345">
+        <img src="carousel2.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -95,7 +95,7 @@
       </div>
     
       <div class="item">
-        <img src="carousel3" alt="Flower" width="460" height="345">
+        <img src="carousel3.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="item">
-        <img src="carousel4" alt="Flower" width="460" height="345">
+        <img src="carousel4.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
