--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                                            <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>
-                    
+                                            <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>                    
                 </li>
                 <li>                    <a href="index.html">Home</a>
                 </li>
@@ -79,7 +78,7 @@ j                        <div class="jumbotron">
     <div class="carousel-inner" role="listbox">
 
 j      <div class="item active">
-        <img src="carousel1.jpg" alt="Chania" width="460" height="345">
+        <img src="http://www.freeimages.com/istockphoto/file?id=34909894&function=free_detail&location=right&keyword=1389335&page=&sharedid=1389335" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
