--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ j                        <div class="jumbotron">
     <div class="carousel-inner" role="listbox">
 
 j      <div class="item active">
-        <img src="http://www.freeimages.com/istockphoto/file?id=34909894&function=free_detail&location=right&keyword=1389335&page=&sharedid=1389335" alt="Chania" width="460" height="345">
+        <img src="http://www.freeimages.com/istockphoto/file?id=34909894&function=free_detail&location=right&keyword=1389335&page=&sharedid=138933" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -134,7 +134,7 @@ j      <div class="item active">
         </div>
         <!-- /#page-content-wrapper -->
 
-    </div>
+    <!--removed </div>-->
     <!-- /#wrapper -->
 
     <!-- jQuery -->
