--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 </li>
                 <li>                    <a href="index.html">Home</a>
                 </li>
-                <li>
-                    <a href="bio.html">Biography</a>
+                <li>                    <a href="bio.html">Biography</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
@@ -78,7 +77,7 @@ j                        <div class="jumbotron">
     <div class="carousel-inner" role="listbox">
 
 j      <div class="item active">
-        <img src="http://www.freeimages.com/istockphoto/file?id=34909894&function=free_detail&location=right&keyword=1389335&page=&sharedid=138933" alt="Chania" width="460" height="345">
+        <img src="carousel1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
