--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
         .carousel-inner > .item > img,
@@ -53,7 +52,7 @@
                 </li>
                 <!--Removed unused links-->
                 
-p            </ul>
+           </ul>
         </div>
         <!-- /#sidebar-wrapper -->
 
@@ -63,7 +62,7 @@ p            </ul>
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Mohamed Abdi</h1>                        <hr>
-j                        <div class="jumbotron">
+                        <div class="jumbotron">
    <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -76,7 +75,7 @@ j                        <div class="jumbotron">
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
 
-j      <div class="item active">
+      <div class="item active">
         <img src="carousel1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
