--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                                            <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>                    
-                </li>
+                                            <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>                                    </li>
                 <li>                    <a href="index.html">Home</a>
                 </li>
                 <li>                    <a href="bio.html">Biography</a>
@@ -76,7 +75,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="carousel1.jpg" alt="Chania" width="460" height="345">
+        <img src="https://static.pexels.com/photos/189925/pexels-photo-189925.jpeg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
