--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                                             <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>                                    </li>
-                <li>                    <a href="index.html">Home</a>
-                </li>
+                <li>                    <a href="index.html">Home</a>                </li>
                 <li>                    <a href="bio.html">Biography</a>
                 </li>
                 <li>
@@ -83,7 +82,7 @@
       </div>
 
       <div class="item">
-        <img src="carousel2.jpg" alt="Chania" width="460" height="345">
+        <img src="https://www.pexels.com/photo/landscape-mountains-nature-clouds-1029/" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
