--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="item">
-        <img src="https://www.pexels.com/photo/landscape-mountains-nature-clouds-1029/" alt="Chania" width="460" height="345">
+        <img src="https://static.pexels.com/photos/24075/pexels-photo-24075.jpg" alt="Chani" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -90,7 +90,7 @@
       </div>
     
       <div class="item">
-        <img src="carousel3.jpg" alt="Flower" width="460" height="345">
+        <img src="https://static.pexels.com/photos/28221/pexels-photo-28221.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
@@ -98,7 +98,7 @@
       </div>
 
       <div class="item">
-        <img src="carousel4.jpg" alt="Flower" width="460" height="345">
+        <img src="https://static.pexels.com/photos/97906/pexels-photo-97906.jpeg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
