--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                                            <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>                                    </li>
-                <li>                    <a href="index.html">Home</a>                </li>
+                                            <img src = "http://images.freeimages.com/images/previews/cf4/berliner-skyline-1370364.jpg" alt="sunset" class="img-circle" width="50" height="50"/>                                    </li>                <li>                    <a href="index.html">Home</a>                </li>
                 <li>                    <a href="bio.html">Biography</a>
                 </li>
                 <li>
@@ -82,7 +81,7 @@
       </div>
 
       <div class="item">
-        <img src="https://static.pexels.com/photos/24075/pexels-photo-24075.jpg" alt="Chani" width="460" height="345">
+        <img src="https://static.pexels.com/photos/169647/pexels-photo-169647.jpeg" alt="Chani" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
