--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>      <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
@@ -89,7 +88,7 @@
       </div>
     
       <div class="item">
-        <img src="https://static.pexels.com/photos/28221/pexels-photo-28221.jpg" alt="Flower" width="460" height="345">
+        <img src="https://static.pexels.com/photos/128845/pexels-photo-128845.jpeg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
