--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,6 +35,7 @@
    
 
 <body>
+  @-ms-viewport { width: device-width; }  
 
     <div id="wrapper">
 
