--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="https://static.pexels.com/photos/189925/pexels-photo-189925.jpeg" alt="Chania" width="460" height="345">
+        <img src="https://static.pexels.com/photos/30360/pexels-photo-30360.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -100,7 +100,7 @@
         <img src="https://static.pexels.com/photos/97906/pexels-photo-97906.jpeg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+            <p>Beatiful flowers in Kolymbari, Crete.</p>
         </div>
       </div>
   
