--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class="container-fluid"><!--Carpet-->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Mohamed Abdi</h1>                        <hr>
+                        <h1>Mohamed Abdi</h1>                        
+                        <hr>
                         <div class="jumbotron">
    <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
