--- a/index.html
+++ b/index.html
@@ -124,7 +124,27 @@
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
-                    </div>
+                    <div class="row"><!--Image gallery-->
+    <div class="col-md-4">
+      <a href="pulpitrock.jpg" class="thumbnail">
+        <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p>    
+        <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="moustiers-sainte-marie.jpg" class="thumbnail">
+        <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
+        <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="cinqueterre.jpg" class="thumbnail">
+        <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
+        <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
+      </a>
+    </div>
+  </div><!--End of gallery-->
+                </div>
                 </div>
             </div>
         </div>
