--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                     <div class="row"><!--Image gallery-->
     <div class="col-md-4">
-      <a href="Pictures/carousel1.jpg" class="thumbnail">
+      <a href="/images/carousel1.jpg" class="thumbnail">
         <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p>    
         <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
       </a>
