--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="col-md-4">
       <a href="https://static.pexels.com/photos/58557/pexels-photo-58557.jpeg" class="thumbnail">
         <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p>    
-        <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
+        <img src="https://static.pexels.com/photos/58557/pexels-photo-58557.jpeg" alt="Pulpit Rock" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
