--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="moustiers-sainte-marie.jpg" class="thumbnail">
+      <a href="lake.jpeg" class="thumbnail">
         <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
-        <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
+        <img src="lake.jpeg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
