--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                         </div>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a><br>
+                    
                     <div class="row"><!--Image gallery-->
     <div class="col-md-4">
       <a href="https://static.pexels.com/photos/58557/pexels-photo-58557.jpeg" class="thumbnail">
