--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="cinqueterre.jpg" class="thumbnail">
+      <a href="lake.jpeg" class="thumbnail">
         <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
-        <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
+        <img src="lake.jpeg" alt="Cinque Terre" style="width:150px;height:150px">
       </a>
     </div>
   </div><!--End of gallery-->
