--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </a>
     </div>
   </div><!--End of gallery-->
-                    <!Second Image Gallery-->
+                    <!--Second Image Gallery-->
                     <div class="row">
     <div class="col-md-4">
       <a href="pulpitrock.jpg" class="thumbnail">
@@ -166,7 +166,7 @@
         <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
       </a>
     </div>
-  </div><!End of second Image Gallery-->
+  </div><!--End of second Image Gallery-->
                 </div>
                 </div>
             </div>
