--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="images/example.jpg" class="thumbnail">
+      <a href="photos/example.jpg" class="thumbnail">
         <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
-        <img src="images/example.jpg" alt="Example" style="width:150px;height:150px">
+        <img src="photos/example.jpg" alt="Example" style="width:150px;height:150px">
       </a>
     </div>
   </div><!--End of gallery-->
