--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="cold-snow-winter-mountain-medium.jpeg" class="thumbnail">
+      <a href="https://github.com/warfahas/personal3/blob/gh-pages/images/cold-snow-winter-mountain-medium.jpeg?raw=true" class="thumbnail">
         <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
-        <img src="cold-snow-winter-mountain-medium.jpeg" alt="Mountain" style="width:150px;height:150px">
+        <img src="https://github.com/warfahas/personal3/blob/gh-pages/images/cold-snow-winter-mountain-medium.jpeg?raw=true" alt="Mountain" style="width:150px;height:150px">
       </a>
     </div>
   </div><!--End of gallery-->
