--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="col-md-4">
       <a href="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/cold-snow-winter-mountain-medium.jpeg" class="thumbnail">
         <p>A snow-covered mountain.</p>      
-        <img src="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/cold-snow-winter-mountain-medium.jpeg" alt="Mountain" style="width:150px;height:150px">
+        <img src="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/cold-snow-winter-mountain-medium.jpeg" alt="Cinque Terre" style="width:150px;height:150px">
       </a>
     </div>
   </div><!--End of gallery-->
