--- a/index.html
+++ b/index.html
@@ -139,30 +139,30 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/cold-snow-winter-mountain-medium.jpeg" class="thumbnail">
+      <a href="https://static.pexels.com/photos/65125/pexels-photo-65125.jpeg" class="thumbnail">
         <p>A snow-covered mountain.</p>      
-        <img src="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/cold-snow-winter-mountain-medium.jpeg" alt="Cinque Terre" style="width:150px;height:150px">
+        <img src="https://static.pexels.com/photos/65125/pexels-photo-65125.jpeg" alt="Cinque Terre" style="width:150px;height:150px">
       </a>
     </div>
   </div><!--End of gallery-->
                     <!--Second Image Gallery-->
                     <div class="row">
     <div class="col-md-4">
-      <a href="pulpitrock.jpg" class="thumbnail">
-        <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p>    
-        <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/29818/pexels-photo-29818.jpg" class="thumbnail">
+        <p>A mountain and river.</p>    
+        <img src="https://static.pexels.com/photos/29818/pexels-photo-29818.jpg" alt="Mountain and River" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
-      <a href="moustiers-sainte-marie.jpg" class="thumbnail">
+      <a href="https://static.pexels.com/photos/30405/pexels-photo.jpg" class="thumbnail">
         <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
-        <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
+        <img src="https://static.pexels.com/photos/30405/pexels-photo.jpg" alt="Mountain at Night" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
-      <a href="cinqueterre.jpg" class="thumbnail">
-        <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
-        <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/186984/pexels-photo-186984.jpeg" class="thumbnail">
+        <p>A picture of mountains and green grass.</p>      
+        <img src="https://static.pexels.com/photos/186984/pexels-photo-186984.jpeg" alt="Mountain and Grass" style="width:150px;height:150px">
       </a>
     </div>
   </div><!--End of second Image Gallery-->
