--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
     <div class="col-md-4">
       <a href="https://static.pexels.com/photos/30405/pexels-photo.jpg" class="thumbnail">
-        <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
+        <p>A beautiful view of a mountain at night.</p>
         <img src="https://static.pexels.com/photos/30405/pexels-photo.jpg" alt="Mountain at Night" style="width:150px;height:150px">
       </a>
     </div>
