--- a/gallery.html
+++ b/gallery.html
@@ -62,25 +62,25 @@
                         <h1>Mohamed Abdi-Gallery</h1>                        
                       <hr>
      <!--Beginning of Image Gallery-->
-    <h2>Image Gallery</h2>
-  <p>The .thumbnail class can be used to display an image gallery. Click on the images to see it in full size:</p>            
+    <h2>Fall Pictures</h2>
+  <p>Beautiful fall pictures displaying beautiful fall scenes with colorful leaves.</p>            
   <div class="row">
     <div class="col-md-4">
-      <a href="pulpitrock.jpg" class="thumbnail">
-        <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p>    
-        <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/33109/fall-autumn-red-season.jpg" class="thumbnail">
+        <p>Red and yellow leaves on the road.</p>    
+        <img src="https://static.pexels.com/photos/33109/fall-autumn-red-season.jpg" alt="Fall01" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
-      <a href="moustiers-sainte-marie.jpg" class="thumbnail">
-        <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
-        <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/3973/bench-forest-trees-path.jpeg" class="thumbnail">
+        <p>Red and yellow leaves on a seat.</p>
+        <img src="https://static.pexels.com/photos/3973/bench-forest-trees-path.jpeg" alt="Leaves on a Seat" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
-      <a href="cinqueterre.jpg" class="thumbnail">
-        <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
-        <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/38861/pexels-photo-38861.jpeg" class="thumbnail">
+        <p>Very colorful maple leaves.</p>      
+        <img src="https://static.pexels.com/photos/38861/pexels-photo-38861.jpeg" alt="Maple Leaves" style="width:150px;height:150px">
       </a>
     </div>
   </div>
