--- a/gallery.html
+++ b/gallery.html
@@ -88,21 +88,21 @@
      <!--Beginning of second Image Gallery-->
      <div class="row">
     <div class="col-md-4">
-      <a href="pulpitrock.jpg" class="thumbnail">
-        <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p>    
-        <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/38046/pexels-photo-38046.jpeg" class="thumbnail">
+        <p>A picture of leaves and sunlight.</p>    
+        <img src="https://static.pexels.com/photos/38046/pexels-photo-38046.jpeg" alt="Sunlight and Leaves" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
-      <a href="moustiers-sainte-marie.jpg" class="thumbnail">
-        <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
-        <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/108783/pexels-photo-108783.jpeg" class="thumbnail">
+        <p>Muddy road beside dry leaves.</p>
+        <img src="https://static.pexels.com/photos/108783/pexels-photo-108783.jpeg" alt="Muddy Road" style="width:150px;height:150px">
       </a>
     </div>
     <div class="col-md-4">
-      <a href="cinqueterre.jpg" class="thumbnail">
-        <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p>      
-        <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
+      <a href="https://static.pexels.com/photos/89290/pexels-photo-89290.jpeg" class="thumbnail">
+        <p>Silhouette of tree under blue sky.</p>      
+        <img src="https://static.pexels.com/photos/89290/pexels-photo-89290.jpeg" alt="Silhouette of Tree" style="width:150px;height:150px">
       </a>
     </div>
   </div>
