--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                     </div>
                         
   <!-Toggle Menu-->   <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                    <br>
+                    <br>
+                    <h3>Beautiful Mountains</h3>
+                    <p>Beautiful pictures of mountains.</p>
                     <hr>
                     
                     <div class="row"><!--Image gallery-->
