--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                     </div>
                         
-  <!-Toggle Menu-->   <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+  <!--Toggle Menu-->   <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                     <br>
                     <br>
                     <h3>Beautiful Mountains</h3>
